2016-05-03  Robby Stephenson  <robby@periapsis.org>

	* Use elided text in Choice combobox to avoid wide windows(Bug 362028).

2016-04-26  Robby Stephenson  <robby@periapsis.org>

	* Added menu items for each Url field in icon view (Bug 250913).

2016-04-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug with empty table rows (Bug 361622).

2016-04-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed filter comparison with custom dates (Bug 361625).

2016-01-15  Sven Werlen  <sven.werlen@gmail.com>

	* Fixed "Defaults" button in Collection Fields dialog (Bug 357637).

2015-12-06  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.11.

2015-10-25  Robby Stephenson  <robby@periapsis.org>

	* Removed the Yahoo fetcher.

2015-10-22  Robby Stephenson  <robby@periapsis.org>

	* Added user-defined query pairs for SRUFetcher url.

2015-08-22  Robby Stephenson  <robby@periapsis.org>

	* Improved PDF importer for Science Direct files.

2015-08-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed key accelerator conflict for 'D' in Collection Fields dialog (Bug 351226).

2015-08-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with using external fetcher source with MODS output.

2015-07-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed a crashing bug with Nepomuk and certain file types (Bug 345458).

2015-06-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with HTML exporting titles with single-quotes (Bug 348381).

2015-05-27  Robby Stephenson  <robby@homebase.mars>

	* Removed the Citebase fetcher.

2015-05-24  Robby Stephenson  <robby@homebase.mars>

	* Fixed a bug showing horizontal scroll bar with many table columns (Bug 348189).

2015-03-15  Robby Stephenson  <robby@homebase.mars>

	* Removed the PilotDB exporter.

2015-02-15  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.10.

2015-02-14  Robby Stephenson  <robby@homebase.mars>

	* Updated the Moviemeter data source to use the new JSON API.