@@ -1,3 +1,7 @@
+2016-05-25  Robby Stephenson  <robby@periapsis.org>
+
+	* Improved performance when deleting many entries.
+
 2016-05-03  Robby Stephenson  <robby@periapsis.org>
 
 	* Use elided text in Choice combobox to avoid wide windows(Bug 362028).
